force-app/main/default/objects/Call_Report__c/Call_Report__c.object-meta.xml
<CustomObject>
    <description>Object to store Call Reports</description>
    <label>Call Report</label>
    <nameField>
        <displayFormat>CRPT-{0000}</displayFormat>
        <label>Call Report #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>