force-app/main/default/objects/Call_Report__c/fields/Account_Legacy_Id_S2S__c.field-meta.xml
<CustomField>
    <fullName>Account_Legacy_Id_S2S__c</fullName>
    <label>Account Legacy Id S2S</label>
    <length>225</length>
    <type>Text</type>
</CustomField>