force-app/main/default/objects/Call_Report__c/fields/Advance_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Advance_Achieved__c</fullName>
    <label>Advance Achieved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>