force-app/main/default/objects/Call_Report__c/fields/Advance_Comments__c.field-meta.xml
<CustomField>
    <fullName>Advance_Comments__c</fullName>
    <label>Advance Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>