force-app/main/default/objects/Call_Report__c/fields/Alternative_Advance__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Advance__c</fullName>
    <inlineHelpText>What is the ADVANCE you are planning to achieve? (Use the SMART criteria to strengthen an Advance)</inlineHelpText>
    <label>Alternative Advance</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>