force-app/main/default/objects/Call_Report__c/fields/Applications_Services__c.field-meta.xml
<CustomField>
    <fullName>Applications_Services__c</fullName>
    <label>Applications &amp; Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Critical Event Video</fullName>
            </value>
            <value>
                <fullName>Data Plan</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Active Driver Coach</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Analytics Manager</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Critical Event Reporting</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Critical Event Video</fullName>
            </value>
            <value>
                <fullName>Enterprise Services - Customer Portal</fullName>
                <label>Enterprise Services – Customer Portal</label>
            </value>
            <value>
                <fullName>Enterprise Services – Driver Workflow</fullName>
            </value>
            <value>
                <fullName>Enterprise Services - DTTS</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Exact Fuel</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Extended Fault Monitoring</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Extended Productivity (BlueDot)</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Fault Monitoring</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Fuel Tax Automation</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – In-Cab Printing</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – In-Cab Scanning</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Media Manager</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Mobile Apps</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Mobile Data Capture</fullName>
            </value>
            <value>
                <fullName>Enterprise Services - Mobile Hours of Service</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Per Diem Manager</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Performance Monitoring</fullName>
            </value>
            <value>
                <fullName>Enterprise Services - Services Portal</fullName>
                <label>Enterprise Services – Services Portal</label>
            </value>
            <value>
                <fullName>Enterprise Services - Support Portal</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Tire Inflation Alerts</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Tire Pressure Monitoring</fullName>
            </value>
            <value>
                <fullName>Enterprise Services - Trailer ID</fullName>
                <label>Enterprise Services – Trailer ID</label>
            </value>
            <value>
                <fullName>Enterprise Services – Trip Manager</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Vehicle Inspection Reports</fullName>
            </value>
            <value>
                <fullName>Enterprise Services – Web Browser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>