force-app/main/default/objects/Call_Report__c/fields/Are_Timesheets_Manual__c.field-meta.xml
<CustomField>
    <fullName>Are_Timesheets_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if YES, leave alone if NO</inlineHelpText>
    <label>Are Timesheets Manual?</label>
    <type>Checkbox</type>
</CustomField>