force-app/main/default/objects/Call_Report__c/fields/Are_you_an_Individual_Owner__c.field-meta.xml
<CustomField>
    <fullName>Are_you_an_Individual_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if YES, leave alone if NO</inlineHelpText>
    <label>Are you an Individual Owner?</label>
    <type>Checkbox</type>
</CustomField>