force-app/main/default/objects/Call_Report__c/fields/Call_Report_Owner_Business_Unit_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Call_Report_Owner_Business_Unit_Hidden__c</fullName>
    <description>Pulling in a copy of the User&apos;s business unit for reporting purposes</description>
    <formula>text(CreatedBy.Business_Unit__c)</formula>
    <label>Call Report Owner Business Unit - Hidden</label>
    <type>Text</type>
</CustomField>