force-app/main/default/objects/Call_Report__c/fields/Can_vehicles_be_used_for_Personal_biz__c.field-meta.xml
<CustomField>
    <fullName>Can_vehicles_be_used_for_Personal_biz__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if YES, leave alone if NO</inlineHelpText>
    <label>Can vehicles be used for Personal biz?</label>
    <type>Checkbox</type>
</CustomField>