force-app/main/default/objects/Call_Report__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Name</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Call Reports</relationshipLabel>
    <relationshipName>Call_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>