force-app/main/default/objects/Call_Report__c/fields/Competitor_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Product Name</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Competitor_Products__c</referenceTo>
    <relationshipLabel>Call Reports</relationshipLabel>
    <relationshipName>Call_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>