force-app/main/default/objects/Call_Report__c/fields/Contact_S2S__c.field-meta.xml
<CustomField>
    <fullName>Contact_S2S__c</fullName>
    <label>Contact S2S</label>
    <length>225</length>
    <type>Text</type>
</CustomField>