force-app/main/default/objects/Call_Report__c/fields/Created_by_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Role__c</fullName>
    <label>Created by Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>