force-app/main/default/objects/Call_Report__c/fields/Current_Situation__c.field-meta.xml
<CustomField>
    <fullName>Current_Situation__c</fullName>
    <inlineHelpText>What business issues, challenges, and/or market place trends are impacting this customer? What additional resources can you consult to prepare for this meeting?</inlineHelpText>
    <label>Current Situation</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>