force-app/main/default/objects/Call_Report__c/fields/Customer_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attendees__c</fullName>
    <label>Customer Attendees</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>