force-app/main/default/objects/Call_Report__c/fields/Customer_Centered_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Customer_Centered_Purpose__c</fullName>
    <inlineHelpText>Given your objective for the call, how will you open with a CUSTOMER-CENTERED PURPOSE?</inlineHelpText>
    <label>Customer Centered Purpose</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>