force-app/main/default/objects/Call_Report__c/fields/Customer_Success_Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Lead_Email__c</fullName>
    <description>Customer Success Lead from Account</description>
    <label>Customer Success Lead Email</label>
    <type>Email</type>
</CustomField>