force-app/main/default/objects/Call_Report__c/fields/Customer_Success_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Manager_Email__c</fullName>
    <description>Customer Success Manager Email</description>
    <label>Customer Success Manager Email</label>
    <type>Email</type>
</CustomField>