force-app/main/default/objects/Call_Report__c/fields/Date_Of_Call__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Call__c</fullName>
    <label>Date Of Call</label>
    <type>Date</type>
</CustomField>