force-app/main/default/objects/Call_Report__c/fields/Do_Employees_have_Internet_Access__c.field-meta.xml
<CustomField>
    <fullName>Do_Employees_have_Internet_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if YES, leave alone if NO</inlineHelpText>
    <label>Do Employees have Internet Access?</label>
    <type>Checkbox</type>
</CustomField>