force-app/main/default/objects/Call_Report__c/fields/Do_Employees_take_Co_vehicles_Home__c.field-meta.xml
<CustomField>
    <fullName>Do_Employees_take_Co_vehicles_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are the employees allowed to take Company Vehicles home?</description>
    <inlineHelpText>Check if YES, leave alone if NO</inlineHelpText>
    <label>Do Employees take Co. vehicles Home?</label>
    <type>Checkbox</type>
</CustomField>