force-app/main/default/objects/Call_Report__c/fields/Do_you_provide_24_Hour_Service__c.field-meta.xml
<CustomField>
    <fullName>Do_you_provide_24_Hour_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if YES, leave alone if NO</inlineHelpText>
    <label>Do you provide 24-Hour Service</label>
    <type>Checkbox</type>
</CustomField>