force-app/main/default/objects/Call_Report__c/fields/Existing_Problems__c.field-meta.xml
<CustomField>
    <fullName>Existing_Problems__c</fullName>
    <inlineHelpText>What potential PROBLEMS exist that you can solve?</inlineHelpText>
    <label>Existing Problems</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>