force-app/main/default/objects/Call_Report__c/fields/Expected_Competitor_Contract_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Expected_Competitor_Contract_Expiration__c</fullName>
    <label>Expected Competitor Contract Expiration</label>
    <type>Date</type>
</CustomField>