force-app/main/default/objects/Call_Report__c/fields/How_are_Employees_Paid__c.field-meta.xml
<CustomField>
    <fullName>How_are_Employees_Paid__c</fullName>
    <inlineHelpText>How are they paying their staff?</inlineHelpText>
    <label>How are Employees Paid?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Percentage (%)</fullName>
            </value>
            <value>
                <fullName>Per Mile Driven</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>