force-app/main/default/objects/Call_Report__c/fields/ID_S2S__c.field-meta.xml
<CustomField>
    <fullName>ID_S2S__c</fullName>
    <externalId>true</externalId>
    <label>ID S2S</label>
    <length>255</length>
    <type>Text</type>
</CustomField>