force-app/main/default/objects/Call_Report__c/fields/Implication_Questions__c.field-meta.xml
<CustomField>
    <fullName>Implication_Questions__c</fullName>
    <inlineHelpText>IMPLICATION questions you might ask</inlineHelpText>
    <label>Implication Questions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>