force-app/main/default/objects/Call_Report__c/fields/Information_Needed__c.field-meta.xml
<CustomField>
    <fullName>Information_Needed__c</fullName>
    <inlineHelpText>What INFORMATION do you need to know?</inlineHelpText>
    <label>Information Needed</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>