force-app/main/default/objects/Call_Report__c/fields/Is_a_ROI_activity__c.field-meta.xml
<CustomField>
    <fullName>Is_a_ROI_activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a ROI activity</label>
    <type>Checkbox</type>
</CustomField>