force-app/main/default/objects/Call_Report__c/fields/Items_for_Executive_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Items_for_Executive_Assistance__c</fullName>
    <description>Used to denote Call Reports items for leadership report</description>
    <label>Items for Executive Assistance</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>