force-app/main/default/objects/Call_Report__c/fields/Items_for_Executive_Assistance_Flag__c.field-meta.xml
<CustomField>
    <fullName>Items_for_Executive_Assistance_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to denote Call Reports items for leadership report.
3/15/2015, Rittu Roy - There is no reference to this field in the system and can be deleted later.</description>
    <label>Items for Executive Assistance_Flag</label>
    <type>Checkbox</type>
</CustomField>