force-app/main/default/objects/Call_Report__c/fields/Meeting_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date_Time__c</fullName>
    <label>Meeting Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>