force-app/main/default/objects/Call_Report__c/fields/Meeting_Summary2__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Summary2__c</fullName>
    <label>Meeting Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>