force-app/main/default/objects/Call_Report__c/fields/Meeting_Summary__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Summary__c</fullName>
    <label>Meeting Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>