force-app/main/default/objects/Call_Report__c/fields/Need_Payoff_Questions__c.field-meta.xml
<CustomField>
    <fullName>Need_Payoff_Questions__c</fullName>
    <inlineHelpText>NEED-PAYOFF questions you might ask</inlineHelpText>
    <label>Need-Payoff Questions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>