force-app/main/default/objects/Call_Report__c/fields/Needs_Explicit__c.field-meta.xml
<CustomField>
    <fullName>Needs_Explicit__c</fullName>
    <label>Needs - Explicit</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>