force-app/main/default/objects/Call_Report__c/fields/Needs_Expressed__c.field-meta.xml
<CustomField>
    <fullName>Needs_Expressed__c</fullName>
    <label>Needs - Expressed</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>