force-app/main/default/objects/Call_Report__c/fields/Needs_Implied__c.field-meta.xml
<CustomField>
    <fullName>Needs_Implied__c</fullName>
    <label>Needs - Implied</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>