force-app/main/default/objects/Call_Report__c/fields/Needs_To_Be_Developed__c.field-meta.xml
<CustomField>
    <fullName>Needs_To_Be_Developed__c</fullName>
    <label>Needs - To Be Developed</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>