force-app/main/default/objects/Call_Report__c/fields/Next_Steps_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_Date__c</fullName>
    <label>Next Steps Date</label>
    <type>Date</type>
</CustomField>