force-app/main/default/objects/Call_Report__c/fields/OEM_Used__c.field-meta.xml
<CustomField>
    <fullName>OEM_Used__c</fullName>
    <inlineHelpText>OEM used to purchase trucks (may be many)</inlineHelpText>
    <label>OEM Used</label>
    <type>TextArea</type>
</CustomField>