force-app/main/default/objects/Call_Report__c/fields/Operations_IT_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Operations_IT_Maintenance__c</fullName>
    <label>Operations / IT / Maintenance</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>