force-app/main/default/objects/Call_Report__c/fields/OT_is_Paid__c.field-meta.xml
<CustomField>
    <fullName>OT_is_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if YES, leave alone if NO</inlineHelpText>
    <label>OT is Paid</label>
    <type>Checkbox</type>
</CustomField>