force-app/main/default/objects/Call_Report__c/fields/Potential_Value__c.field-meta.xml
<CustomField>
    <fullName>Potential_Value__c</fullName>
    <inlineHelpText>What are the potential desired outcomes and VALUE derived from resolving this issue?</inlineHelpText>
    <label>Potential Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>