force-app/main/default/objects/Call_Report__c/fields/Primary_Product__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product__c</fullName>
    <description>Owner: Sales Ops, NPS Team 
Description: Primary Product is the product which generates highest revenue recently for the account.</description>
    <formula>Account__r.Primary_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Product</label>
    <type>Text</type>
</CustomField>