force-app/main/default/objects/Call_Report__c/fields/Problem_Implications__c.field-meta.xml
<CustomField>
    <fullName>Problem_Implications__c</fullName>
    <inlineHelpText>What are the IMPLICATIONS that make these problems more serious or urgent?</inlineHelpText>
    <label>Problem Implications</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>