force-app/main/default/objects/Call_Report__c/fields/Problem_Questions__c.field-meta.xml
<CustomField>
    <fullName>Problem_Questions__c</fullName>
    <inlineHelpText>PROBLEM questions you might ask</inlineHelpText>
    <label>Problem Questions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>