force-app/main/default/objects/Call_Report__c/fields/Product_Management_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Product_Management_Attendees__c</fullName>
    <label>Product Management Attendees</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amine Faridi</fullName>
            </value>
            <value>
                <fullName>Andrew Bates</fullName>
            </value>
            <value>
                <fullName>Andy Hicks</fullName>
            </value>
            <value>
                <fullName>Aneil Razvi</fullName>
            </value>
            <value>
                <fullName>Arielle McMahon</fullName>
            </value>
            <value>
                <fullName>Ashlei Mitchell</fullName>
            </value>
            <value>
                <fullName>Bill Mattingly</fullName>
            </value>
            <value>
                <fullName>Bill McHenry</fullName>
            </value>
            <value>
                <fullName>Brenda Cudone</fullName>
            </value>
            <value>
                <fullName>Brian Walton-King</fullName>
            </value>
            <value>
                <fullName>Bryan Slaughenhoupt</fullName>
            </value>
            <value>
                <fullName>Bryce Murphy</fullName>
                <isActive>false</isActive>
                <label>Bryce Murphy</label>
            </value>
            <value>
                <fullName>Casey Crawford</fullName>
            </value>
            <value>
                <fullName>Chris Chappelear</fullName>
            </value>
            <value>
                <fullName>Chris Taylor</fullName>
            </value>
            <value>
                <fullName>Christian Beatty</fullName>
            </value>
            <value>
                <fullName>Colleen Watson</fullName>
            </value>
            <value>
                <fullName>Craig Powell</fullName>
            </value>
            <value>
                <fullName>Dalia Vazquez</fullName>
            </value>
            <value>
                <fullName>Dallas Miller</fullName>
            </value>
            <value>
                <fullName>Dave Gutz</fullName>
            </value>
            <value>
                <fullName>David Minich</fullName>
                <isActive>false</isActive>
                <label>David Minich</label>
            </value>
            <value>
                <fullName>David Palle</fullName>
            </value>
            <value>
                <fullName>Dawn Lein</fullName>
            </value>
            <value>
                <fullName>Daysha Diaz</fullName>
            </value>
            <value>
                <fullName>Deepak Kadambi</fullName>
            </value>
            <value>
                <fullName>Dhiren Patel</fullName>
            </value>
            <value>
                <fullName>Drew Schimelpfenig</fullName>
            </value>
            <value>
                <fullName>Elena Ogorodnikova</fullName>
                <isActive>false</isActive>
                <label>Elena Ogorodnikova</label>
            </value>
            <value>
                <fullName>Emmanuel Carranza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>