force-app/main/default/objects/Call_Report__c/fields/PS_Discipline__c.field-meta.xml
<CustomField>
    <fullName>PS_Discipline__c</fullName>
    <description>Type of Professional Services activity.</description>
    <inlineHelpText>Type of Professional Services activity. You can select more than one.</inlineHelpText>
    <label>PS Discipline</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>