force-app/main/default/objects/Call_Report__c/fields/Quantity_Of_Trucks__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Of_Trucks__c</fullName>
    <inlineHelpText>Quantity of new trucks to be ordered in the next 12 months</inlineHelpText>
    <label>Quantity Of Trucks</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>